# Searcher

./: CMakeLists.txt  ConverterJson.cpp  ConverterJson.h  Doc1.txt  Doc2.txt  Entry.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  Searcher.cpp  Searcher.h  config.json  requests.json  test.cpp
include/: ConverterJson.h  Entry.h  InvertedIndex.h  SearchServer.h
resources/: Doc1.txt  Doc2.txt
src/: ConverterJson.cpp  InvertedIndex.cpp  SearchServer.cpp  Searcher.cpp  test.cpp
